# drf-api-permissions-postgres

./: pyproject.toml
Blog/: db.sqlite3  docker-compose.yml  requirements.txt
Blog/Blog/: settings.py
